
2018-07-18  Edward Hart <edward.dan.hart@gmail.com>

	* typeck.c: added checks for (RE)WRITE FILE f FROM literal (bug #411)
	* parser.y (file_control_entry): fixed regression caused when fixing
	  bug #405

2018-07-13  Simon Sobisch <simonsobisch@gnu.org>

	* reserved.c, parser.y: added IBM's ALLOCATE format by including the
	  ignored LOC phrase

2018-07-05  Ron Norman <rjn@inglenet.com>

	* parser.y, scanner.l: removed LENGTH_OF as it is no longer used

2018-07-04  Edward Hart <edward.dan.hart@gmail.com>

	* tree.c (cb_build_picture): fixed calculation of number of decimal
	  digits in PICs with floating +/- after decimal point, e.g. --.--.
	  See bug #220

2018-07-04  Ron Norman <rjn@inglenet.com>
	* codegen.c: Fixed 'output_size' to compute size of OCCURS DEPENDING
	          for -fodoslide as well as when the field is BASED or
			  is in LINKAGE SECTION
	* typeck.c: If destination of a MOVE is variable_size
	   and there is no reference mod (or start position is 1)
	   and the field is BASED or in LINKAGE SECTION
	   then emit code to MOVE fixed size header of field first as it
	   may be holding the DEPENDING ON fields/values
	   and then do a complete MOVE.
	   If the field is NOT BASED and NOT LINKAGE
	   then MOVE for the maximum size of the destination field

2018-07-04  Ron Norman <rjn@inglenet.com>

	* parser.y: accept both LENGTH and LENGTH OF in all places

2018-07-03  Simon Sobisch <simonsobisch@gnu.org>

	* codeoptim.c: removed inclusion of defaults.h (no definitions used)

2018-06-29  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_internal_function): fixed bug #98 "SIGSEGV
	  on CANCEL of RECURSIVE programs" by adjusting generation of
	  CANCEL callback

2018-06-28  Ron Norman <rjn@inglenet.com>

	* typeck.c (cb_build_expr): fix bug #526 - Check for properly formed
	  'Abbreviated conditional expressions'

2018-06-26  Simon Sobisch <simonsobisch@gnu.org>

	* field.c (validate_usage): fixed SIGSEGV when PICTURE is missing