@@ -209,6 +209,7 @@ national-literals:			ok
 hexadecimal-national-literals:		ok
 acu-literals:			unconformable
 word-continuation:			archaic
+depending-on-not-fixed:			ok
 not-exception-before-exception:		ok
 accept-display-extensions:		unconformable
 renames-uncommon-levels:		unconformable
