@@ -208,6 +208,7 @@ national-literals:			unconformable
 hexadecimal-national-literals:		unconformable
 acu-literals:			unconformable
 word-continuation:			ok
+depending-on-not-fixed:			ok
 not-exception-before-exception:		unconformable
 accept-display-extensions:		unconformable
 renames-uncommon-levels:		unconformable
