@@ -217,6 +217,7 @@ national-literals:			ok
 hexadecimal-national-literals:		ok
 acu-literals:				unconformable
 word-continuation:			warning
+depending-on-not-fixed:			warning
 not-exception-before-exception:		ok
 accept-display-extensions:		ok
 renames-uncommon-levels:		ok
